# omni-semantic-search-agent

./: .gitignore  LICENSE  README.md  config.py  docker-compose.yml  gpu_check.py  main.py  pipeline.py  pyproject.toml
api/: ollama_client.py
core/: database.py  ingestion.py  reranking.py
