[project]
name = "production-grade-rag-agent"
version = "0.1.0"
description = "A production-grade RAG agent using Ollama, Docling, Qdrant, and FlashRank."
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "docling>=2.0.0",        # Deep document parsing (PDFs/Docs to Markdown)
    "qdrant-client>=1.12.0", # Local Vector Database
    "ollama>=0.3.3",         # Bridge to your Ollama App
    "flashrank>=0.2.8",      # Ultra-lightweight re-ranker for 4GB VRAM
    "torch>=2.4.0",          # Required by Docling 
    "torchvision>=0.19.0",   # Required by Docling for layout analysis
]

[tool.uv]
# This tells uv to look at the official PyTorch Windows/CUDA repository
# instead of just the standard Python store (PyPI).
index-strategy = "unsafe-best-match"  # This fixes the 'certifi' error
index-url = "https://pypi.org/simple"
extra-index-url = ["https://download.pytorch.org/whl/cu124"]


[tool.uv.sources]
# Forces Windows to use the CUDA version of torch
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true